[package]
name = "nslocer"
version = "0.1.0"
edition = "2021"
authors = ["Shogoki"]
description = "A simple tool to calculate normalized lines of code, utilitizing tokei in the background"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokei = "12.1.2"
