[package]
name = "nslocer"
version = "0.1.0"
edition = "2021"
authors = ["Shogoki"]
description = "A simple tool to calculate normalized lines of code, utilitizing tokei in the background"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0.113"
#tokei = "12.1.2"
# We are using a slightly modified version of tokei, which hopefully gets integrated into the main library
tokei = { git = "https://github.com/Shogoki/tokei", branch = "feat/transform-fn" }

